--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="hero-section">
             <div class="container">
                 <h1 class="hero-text">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-buttom">Order Service</button>
+                <button type="button" class="hero-buttom" data-modal-open>Order Service</button>
             </div>
         </section>
         <!-- Features -->
@@ -371,6 +371,17 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="modal-close-btn-icon" width="8" height="8">
+                    <use href="./images/icons.svg#close">
+                    </use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
