--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a class="logo link" href=./index.html>Web<span class="nav-logo">Studio</span></a>
             <ul class="nav-menu list">
                 <li class="item"><a href="./index.html" class="nav-link link">Studio</a></li>
-                <li class="item"><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+                <li class="item"><a href="./portfolio.html" class="nav-link link current">Portfolio</a></li>
                 <li class="item"><a href="" class="nav-link link">Contacts</a></li>
             </ul>
         </nav>
@@ -69,7 +69,11 @@
             <ul class="cards-title list">
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/BankingAppInterfaceConcept.jpg" alt="BankingApp" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app"> 
                         <h2 class="cards-head">Banking App Interface Concept</h2>
                         <p class="cards-text">App</p>
@@ -78,7 +82,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/CashlessPayment.jpg" alt="CashlessPayments" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Cashless Payment</h2>
                         <p class="cards-text">Marketing</p>
@@ -87,7 +95,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/MeditationApp.jpg" alt="MeditationApp" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Meditation App</h2>
                         <p class="cards-text">App</p>
@@ -96,7 +108,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/TaxiService.jpg" alt="TaxiService" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Taxi Service</h2>
                         <p class="cards-text">Marketing</p>
@@ -105,7 +121,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/ScreenIllustrations.jpg" alt="IllustrationsScreen" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Screen Illustrations</h2>
                         <p class="cards-text">Design</p>
@@ -114,7 +134,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/OnlineCourses.jpg" alt="OnlineCourses" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Online Courses</h2>
                         <p class="cards-text">Marketing</p>
@@ -123,7 +147,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/InstagramStoriesConcept.jpg" alt="InstagramStoriesDesign" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Instagram Stories Concept</h2>
                         <p class="cards-text">Design</p>
@@ -133,7 +161,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/OrganicFood.jpg" alt="OrganicFoodWeb" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Organic Food</h2>
                         <p class="cards-text">Web Site</p>
@@ -142,7 +174,11 @@
                 </li>
                 <li class="item">
                     <a class="cards-link link" href="">
+                        <div class="cards-bottom-info">
                         <img src="./images/FreshCoffee.jpg" alt="CoffeWeb" width="360">
+                        <p class="cards-bottom-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
                         <div class="container-app">
                         <h2 class="cards-head">Fresh Coffee</h2>
                         <p class="cards-text">Web Site</p>
