--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="nav header-menu">
                 <a class="logo link" href=./index.html>Web<span class="nav-logo">Studio</span></a>
                 <ul class="nav-menu list">
-                    <li class="item"><a href="./index.html" class="nav-link link">Studio</a></li>
+                    <li class="item"><a href="./index.html" class="nav-link link current">Studio</a></li>
                     <li class="item"><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
                     <li class="item"><a href="" class="nav-link link">Contacts</a></li>
                 </ul>
